--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -1,20 +1,14 @@
 <body>
-  <!-- 到着メッセージ -->
-  <div id="arrivalMessage" class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 z-50 hidden opacity-0 transition-opacity duration-1000 ease-in-out">
-    <%= image_tag "/images/touchaku.png", alt: "arrival" %>
-  </div>
-
-  <!-- ヘッダー部分 -->
   <div class="p-2 space-y-2">
     <div class="flex items-center justify-between">
       <div class="flex items-center space-x-2">
         <%= image_tag "/images/route_logo.png",alt: "route_logo", class: "h-10" %> 
         <h1 class="cute-title">ルート作成</h1>
         <%= link_to car_routes_path do %>
-          <%= image_tag "/images/go_walk.png", alt: "go_walk", class: "h-20" %>
+          <%= image_tag "/images/go_walk.png", alt: "go_walk", class:"btn_effect h-20" %>
         <% end %>
       </div>
-      <div class="load_top">
+      <div class="btn_effect load_top">
         <%= link_to root_path do %>
           <%= image_tag "/images/load_top.png", alt: "load_top"%>
         <% end %>
@@ -22,18 +16,18 @@
     </div> 
     <div class="flex items-center space-x-2 justify-center">
       <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
-      <button id="searchBtn" class="px-2 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">検索</button>
-      <button id="walkDrawRoute" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold">ルート検索</button>
+      <button id="searchBtn" class="btn_effect px-2 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">検索</button>
+      <button id="walkDrawRoute" class="btn_effect px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold">ルート検索</button>
     </div>
   </div>
 
   <!-- フローティングボタンをヘッダーの下に移動 -->
   <div class="absolute top-34 right-0 z-10 flex items-center">
-    <button id="currentPosBtn" class="current_pos appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
+    <button id="currentPosBtn" class="btn_effect current_pos appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
       <%= image_tag "/images/currentPos.png", alt: "current_pos" %>
     </button> 
     <%= link_to walk_navigation_routes_path, data: { barba: "link" } do %>
-      <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"navi_btn" %>
+      <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn" %>
     <% end %>
   </div>
 
