--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -1,5 +1,5 @@
 <body>
-  <%= render 'shared/route_form_header' %>
+  <%= render 'shared/route_form_header', mode: :car %>
     <div class="space-y-2 -mt-2"> 
       <div class="flex items-center space-x-2 justify-center">
         <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
@@ -13,16 +13,16 @@
     </div>
 
   <div class="absolute top-48 right-0 z-10 flex items-center">     
-    <button id="currentPosBtnCar" class ="btn_effect current_pos appearance-none bg-transparent border-none p-0m-0 mr-[-1rem]">
+    <button id="currentPosBtnCar" class ="btn_effect current_pos appearance-none bg-transparent border-none p-0m-0 mr-[-1rem] mt-3">
       <%= image_tag "/images/currentPos.png", alt:"current_pos_car" %>
     </button>
     <%= link_to car_navigation_routes_path do %>
-      <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn" %>
+      <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn mt-5" %>
     <% end %>
   </div>
 
-  <div class="mt-20">
-    <div class="point-selector">
+  <div class="mt-15">
+    <div class="point-selector -mt-3">
       <button id="startPoint">現在地</button>
       <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
       <button id="routeParking"style="display:none;">駐車場</button>
