--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,10 @@
-<p>Hello <%= @resource.email %>!</p>
+<p><%= @resource.email %>様</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<div>パスワード変更リクエストを受け付けました。<br>
+  下記URLから新しいパスワードの設定を行なってください。
+</div>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to 'パスワードの変更はこちら', edit_password_url(@resource, reset_password_token: @token) %></p>
+  
+<p>また、こちらのメールに心当たりがない場合はパスワード変更不要です。</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
