LINEログインまで成功。その後のコールバックURLへの移行で400エラー

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,15 +12,10 @@
           <%= f.label :email %><br />
           <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "border-0 border-b-2 border-[#6D4808] focus:border-[#6D4808] outline-none w-2/3 py-1 bg-[#FFEFE2]" %>
         </div>
-
+        
         <div class="field">
-          <%= f.label :"姓" %><br />
-          <%= f.text_field :last_name, autofocus: true, class: "border-0 border-b-2 border-[#6D4808] focus:border-[#6D4808] outline-none w-2/3 py-1 bg-[#FFEFE2]" %>
-        </div>
-
-        <div class="field">
-          <%= f.label :"名" %><br />
-          <%= f.text_field :first_name, autofocus: true, class: "border-0 border-b-2 border-[#6D4808] focus:border-[#6D4808] outline-none w-2/3 py-1 bg-[#FFEFE2]" %>
+          <%= f.label :"名前" %><br />
+          <%= f.text_field :name, autofocus: true, class: "border-0 border-b-2 border-[#6D4808] focus:border-[#6D4808] outline-none w-2/3 py-1 bg-[#FFEFE2]" %>
         </div>
 
         <div class="field">
