--- a/app/views/shared/_route_form_header.html.erb
+++ b/app/views/shared/_route_form_header.html.erb
@@ -2,7 +2,7 @@
   <div class ="flex items-center mt-2 ml-2">
     <div class="flex items-center space-x-2">
       <%= image_tag "/images/sketto_man.png", alt: "sketto_man", class: "h-10" %>
-      <% name_length = (current_user.name.length %> 
+      <% name_length = (current_user.name.length) %> 
       <h1 class="cute-title text-left <%= name_length >=8 ? 'text-sm' : 'text-base' %>">
         <%= "#{current_user.name} さん" %>
       </h1>
