mapApiLoadedを待つ仕組み

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,13 @@
     <% flash.each do |message_type, message| %>
       <div class="flash_message <%= message_type %>"><%= message %></div>
     <% end %>
+    <%# GoogleMapsが呼び出す公式推奨のコールバック関数 %>
+    <%# callback=initMapに指定した関数はGoogleMapsApiのロード&初期化が終わってから呼ばれる %>
+    <script async defer 
+      src="https://maps.googleapis.com/maps/api/js?key=<%= google_maps_api_key %>&libraries=places,marker,geometry&callback=onGoogleMapsReady"
+      async
+      defer
+    ></script>
     <%= render 'shared/component/barba_wrapper' do %>
       <link href='https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap' rel="stylesheet">
       <%= yield %>
