--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,10 @@
       async
       defer
     ></script>
+
+    <%= render "layouts/header" %>
     <%= render 'shared/component/barba_wrapper' do %>
+
       <link href='https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap' rel="stylesheet">
       <%= yield %>
     <% end %>
