--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
     <%# navbar-toggler → 小さい画面で表示されるボタン %>
     <%# data-bs-toggle="collapse" → 折りたたみ機能（クリックで開閉）%>
     <%# data-bs-target="#navbarNav" → 開閉させる対象のIDを指定 %>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" data-turbo="false" data-barba-prevent="all">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
