--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Tailwindの定義を上書きするために詳細度をあげてvisibility: visibleを強制*/
+.collapse:not(.show) .nav-item,
+.navbar-nav .nav-item {
+  visibility: visible !important;
+}
+
 @import "bootstrap/dist/css/bootstrap.min.css";
 
 @import "./components/buttons.css";
