--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
   <%# container-fluid は、左右に余白がなく画面いっぱいに広がるコンテナ %>
   <div class="container-fluid">
     <%# <a> タグはリンク %>
-    <a class="navbar-brand" href="#">アプリ名</a>
+    <%= render 'shared/component/login_info' %>
     <%# navbar-toggler → 小さい画面で表示されるボタン %>
     <%# data-bs-toggle="collapse" → 折りたたみ機能（クリックで開閉）%>
     <%# data-bs-target="#navbarNav" → 開閉させる対象のIDを指定 %>
@@ -18,27 +18,37 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">
-            <img src="/images/new_route_logo.png" alt="new_route_logo" class="h-8">
+            <img src="/images/new_route_logo.png" alt="new_route_logo" class="h-10">
           </a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" href="#">
-            <img src="/images/locations_logo.png" alt="locations_logo" class="h-8">
+            <img src="/images/locations_logo.png" alt="locations_logo" class="h-10">
           </a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" href="#">
-            <img src="/images/routes_logo.png" alt="routes_logo" class="h-8">
+            <img src="/images/routes_logo.png" alt="routes_logo" class="h-10">
           </a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link" href="#">
-            <img src="/images/parkings_logo.png" alt="parkings_logo" class="h-8">
+            <img src="/images/parkings_logo.png" alt="parkings_logo" class="h-10">
           </a>
         </li>
+
+        <li class="nav-item">
+          <%= button_to destroy_user_session_path,
+            method: :delete, 
+            data: { confirm: "ログアウトしますか？" },
+            class: "bg-transparent border-none p-0 nav-link"  do %>
+            <%= image_tag "/images/logout_button.png", alt: "logout_button", class: "h-9 cursor-pointer" %>
+          <% end %>
+        </li>
+
       </ul>
     </div>
   </div>
