--- a/app/views/shared/component/_login_info.html.erb
+++ b/app/views/shared/component/_login_info.html.erb
@@ -1,15 +1,17 @@
-<% if user_signed_in? %>
-  <div class ="flex items-center mt-2 ml-2">
-    <div class="flex items-center space-x-2">
-      <div class="btn_effect">
-        <%= link_to root_path do %>
-          <%= image_tag "/images/sketto_man.png", alt: "load_top_sketto_man" %>
-        <% end %>
-      </div>
-      <% name_length = (current_user.name.length) %> 
-      <h1 class="cute-title text-left <%= name_length >=8 ? 'text-sm' : 'text-base' %>">
-        <%= "#{current_user.name} さん" %>
-      </h1>
+<div class ="flex items-center mt-2 ml-2">
+  <div class="flex items-center space-x-2">
+    <div class="btn_effect">
+      <%= link_to root_path do %>
+        <%= image_tag "/images/sketto_man.png", alt: "load_top_sketto_man" %>
+      <% end %>
+      <% if user_signed_in? %>
+        <% name_length = (current_user.name.length) %> 
+        <h1 class="cute-title text-left <%= name_length >=8 ? 'text-sm' : 'text-base' %>">
+          <%= "#{current_user.name} さん" %>
+        </h1>
+      <% else %>
+        <%= "ゲストさん" %>
+      <% end %>
     </div>
   </div>
-<% end %>
+</div>
