ナビバーの表示、非表示の出しわけを可能に

--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -1,4 +1,4 @@
-<body>
+<div data-barba="container" data-barba-namespace="walk_routes" data-requires-navbar-menu="true">  
   <%= render 'shared/route_form_header', mode: :walk %>
   <div class="flex items-center space-x-2 justify-center">
     <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
@@ -24,4 +24,4 @@
 
     <div id="map"></div>
   </div>
-</body>
+</div>
