--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,18 +1,23 @@
 <%# class に指定されているクラスは Bootstrap のスタイルを適用するためのもの %>
 <%# navbar → ナビゲーションバー用の基本クラス %>
 <%# navbar-expand-lg → 画面幅が「large（992px）以上」のとき横に展開、それ以下は折りたたむ %>
+<% menu_should_be_visible = user_signed_in? && [walk_routes_path, car_routes_path].include?(request.path) %>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <%# container-fluid は、左右に余白がなく画面いっぱいに広がるコンテナ %>
   <div class="container-fluid">
     <%# <a> タグはリンク %>
     <%= render 'shared/component/login_info' %>
-    <% if user_signed_in? %>
+
+    <%# ここがポイント: メニューを表示すべき場合にのみ、HTML全体を描画する %>
+    <% if menu_should_be_visible %>
       <%# navbar-toggler → 小さい画面で表示されるボタン %>
       <%# data-bs-toggle="collapse" → 折りたたみ機能（クリックで開閉）%>
       <%# data-bs-target="#navbarNav" → 開閉させる対象のIDを指定 %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="navbarNav">
         <%# <ul> → メニュー項目のリスト %>
         <%  1 # navbar-nav → ナビゲーション用のリストスタイル.横並びに整列 %>
