--- a/app/views/shared/component/_login_info.html.erb
+++ b/app/views/shared/component/_login_info.html.erb
@@ -4,6 +4,8 @@
       <%= link_to root_path do %>
         <%= image_tag "/images/sketto_man.png", alt: "load_top_sketto_man" %>
       <% end %>
+    </div>
+    <div class="flex item-center">
       <% if user_signed_in? %>
         <% name_length = (current_user.name.length) %> 
         <h1 class="cute-title text-left <%= name_length >=8 ? 'text-sm' : 'text-base' %>">
