--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -1,34 +1,33 @@
-<body>
-  <%= render 'shared/route_form_header', mode: :car %>
-    <div class="space-y-2 -mt-2"> 
-      <div class="flex items-center space-x-2 justify-center">
-        <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
-        <button id="searchBtn" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">検索</button>
-      </div>
-
-      <div class="flex items-center space-x-2 justify-center  mt-2">            
-        <button id="carDrawRoute" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">ルート検索</button>
-        <button id="searchNearby" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">駐車場を探す</button>
-      </div>
+<%= render 'layouts/header' %>  
+<%= render 'shared/route_form_header', mode: :car %>
+  <div class="space-y-2 -mt-2"> 
+    <div class="flex items-center space-x-2 justify-center">
+      <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
+      <button id="searchBtn" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">検索</button>
     </div>
 
-  <div class="absolute top-48 right-0 z-10 flex items-center">     
-    <button id="currentPosBtnCar" class ="btn_effect current_pos appearance-none bg-transparent border-none p-0m-0 mr-[-1rem] mt-3">
-      <%= image_tag "/images/currentPos.png", alt:"current_pos_car" %>
-    </button>
-    <%= link_to car_navigation_routes_path do %>
-      <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn mt-5" %>
-    <% end %>
+    <div class="flex items-center space-x-2 justify-center  mt-2">            
+      <button id="carDrawRoute" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">ルート検索</button>
+      <button id="searchNearby" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">駐車場を探す</button>
+    </div>
   </div>
 
-  <div class="mt-15">
-    <div class="point-selector -mt-3">
-      <button id="startPoint">現在地</button>
-      <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
-      <button id="routeParking"style="display:none;">駐車場</button>
-      <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
-      <button id="destinationPoint">目的地</button>
-    </div>
-    <div id="map"></div>
+<div class="absolute top-48 right-0 z-10 flex items-center">     
+  <button id="currentPosBtnCar" class ="btn_effect current_pos appearance-none bg-transparent border-none p-0m-0 mr-[-1rem] mt-3">
+    <%= image_tag "/images/currentPos.png", alt:"current_pos_car" %>
+  </button>
+  <%= link_to car_navigation_routes_path do %>
+    <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn mt-5" %>
+  <% end %>
+</div>
+
+<div class="mt-15">
+  <div class="point-selector -mt-3">
+    <button id="startPoint">現在地</button>
+    <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
+    <button id="routeParking"style="display:none;">駐車場</button>
+    <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
+    <button id="destinationPoint">目的地</button>
   </div>
-</body>
+  <div id="map"></div>
+</div>
