--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -1,27 +1,25 @@
-<div data-barba="container" data-barba-namespace="walk_routes" data-requires-navbar-menu="true">  
-  <%= render 'shared/route_form_header', mode: :walk %>
-  <div class="flex items-center space-x-2 justify-center">
-    <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
-    <button id="searchBtn" class="btn_effect px-2 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">検索</button>
-    <button id="walkDrawRoute" class="btn_effect px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold">ルート検索</button>
-  </div>
+<%= render 'layouts/header' %>  
+<%= render 'shared/route_form_header', mode: :walk %>
+<div class="flex items-center space-x-2 justify-center">
+  <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
+  <button id="searchBtn" class="btn_effect px-2 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">検索</button>
+  <button id="walkDrawRoute" class="btn_effect px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold">ルート検索</button>
+</div>
 
-  <!-- フローティングボタンをヘッダーの下に移動 -->
-  <div class="absolute top-45 right-0 z-10 flex items-center">
-    <button id="currentPosBtn" class="btn_effect current_pos appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
-      <%= image_tag "/images/currentPos.png", alt: "current_pos" %>
-    </button> 
-    <%= link_to walk_navigation_routes_path, data: { barba: "link" } do %>
-      <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn" %>
-    <% end %>
+<!-- フローティングボタンをヘッダーの下に移動 -->
+<div class="absolute top-45 right-0 z-10 flex items-center">
+  <button id="currentPosBtn" class="btn_effect current_pos appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
+    <%= image_tag "/images/currentPos.png", alt: "current_pos" %>
+  </button> 
+  <%= link_to walk_navigation_routes_path, data: { barba: "link" } do %>
+    <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn" %>
+  <% end %>
+</div>
+<div class="mt-15">
+  <div class="point-selector">
+    <button id="startPoint">現在地</button>
+    <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
+    <button id="destinationPoint">目的地</button>
   </div>
-  <div class="mt-15">
-    <div class="point-selector">
-      <button id="startPoint">現在地</button>
-      <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
-      <button id="destinationPoint">目的地</button>
-    </div>
-
-    <div id="map"></div>
-  </div>
+  <div id="map"></div>
 </div>
