index.html.erbコーディング

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,9 +29,9 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <%= link_to locations_path, class: "nav-link" do %>
               <img src="/images/locations_logo.png" alt="locations_logo" class="h-10">
-            </a>
+            <% end %>
           </li>
 
           <li class="nav-item">
