--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,3 +1,23 @@
-<div>
-  <h1>名前をつけて保存</h1>
+<div class="container mx-auto px-4 py-8">
+  <h1 class="text-2xl font-bold mb-4">スポットを保存</h1>
+
+  <div class="mb-4">
+    <%= Time.current.strftime('%Y年%m月%d日') %>
+  </div>
+
+  <%= form_with(model: @location, url: locations_path, class: "card bg-base-200 shadow-xl") do |form| %>
+    <div class="card-body">
+      <div class="form-control">
+        <label class="label">
+          <span class="label-text">場所の名前</span>
+        </label>
+        <%= form.text_field :name, class: "input-bordered", required: true %>
+      </div>
+
+      <div class="card-actions justify-end mt-6">
+        <%= link_to 'キャンセル', locations_path, class: "btn btn-ghost" %>
+        <%= form.submit '保存', class: "btn btn-primary" %>
+      </div>
+    </div>
+  <% end %>
 </div>
