--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,17 +1,23 @@
 <div class="container mx-auto px-4 py-8">
-  <h1 class="text-2xl font-bold mb-4">スポットを保存</h1>
+  <h1 class="text-2xl font-bold mb-4">新しい場所を登録</h1>
 
   <div class="mb-4">
     <%= Time.current.strftime('%Y年%m月%d日') %>
   </div>
 
   <%= form_with(model: @location, url: locations_path, class: "card bg-base-200 shadow-xl") do |form| %>
+    <%# バリデーションエラーメッセージの表示 %>
+    <%= render 'shared/error_messages', model: form.object %>
+
     <div class="card-body">
       <div class="form-control">
         <label class="label">
           <span class="label-text">場所の名前</span>
         </label>
-        <%= form.text_field :name, class: "input-bordered", required: true %>
+        <%= form.text_field :name, class: "input input-bordered", required: true %>
+        <%= form.hidden_field :lat %>
+        <%= form.hidden_field :lng %>
+        <%= form.hidden_field :address %>
       </div>
 
       <div class="card-actions justify-end mt-6">
