--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <%# class に指定されているクラスは Bootstrap のスタイルを適用するためのもの %>
 <%# navbar → ナビゲーションバー用の基本クラス %>
 <%# navbar-expand-lg → 画面幅が「large（992px）以上」のとき横に展開、それ以下は折りたたむ %>
-<% menu_should_be_visible = user_signed_in? && [walk_routes_path, car_routes_path].include?(request.path) %>
+<% menu_should_be_visible = user_signed_in? && [walk_routes_path, car_routes_path, locations_path].include?(request.path) %>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <%# container-fluid は、左右に余白がなく画面いっぱいに広がるコンテナ %>
