--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,3 +1,4 @@
+<%= render 'layouts/header' %>  
 <div class="container mx-auto px-4 py-8">
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-2xl font-bold">保存した場所一覧</h1>
@@ -34,4 +35,5 @@
       </table>
     </div>
   <% end %>
+  <div id="map"></div>
 </div>
