deleteボタンのエラーを解消

--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -35,5 +35,7 @@
       </table>
     </div>
   <% end %>
-  <div id="map"></div>
+  <% unless @locations.empty? %>
+    <div id="map"></div>
+  <% end %>
 </div>
