--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide/dist/css/splide.min.css">
     <link rel="stylesheet" href="/assets/builds/application.css" data-turbo-track="reload">
     <script type="module" src="/assets/builds/application.js" data-turbo-track="reload"></script>
+    <style>
+      .gm-style-iw-ch {
+        padding-top: 0 !important;
+      }
+    </style>
   </head>
 
   <body>
@@ -33,8 +38,8 @@
   <template id="info-window-template">
     <div style="min-width:200px;">
         <div class="info-window-facility-name" style="font-weight:bold;font-size:1.1em;margin-bottom:8px;text-align:center;"></div>
-        <button class="info-window-route-btn btn btn-sm bg-white border-white shadow-md" style="margin-right: 8px;">ルート設定</button>
-        <button class="info-window-save-location btn btn-sm bg-white border-white shadow-md">この場所を保存</button>
+        <button class="info-window-route-btn btn btn-sm btn-primary" style="margin-right: 8px;">ルート設定</button>
+        <button class="info-window-save-location btn btn-sm btn-secondary">この場所を保存</button>
     </div>
     <ul class="info-window-dropdown-menu bg-base-100 rounded-box p-2 mt-1" hidden>
       <li><button class="info-window-set-start btn btn-sm btn-primary rounded-full">出発地に設定</button></li>
