--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -27,8 +27,7 @@
 
   <div class="mt-6 flex items-center space-x-2">
     <%= link_to '編集', edit_location_path(@location), class: "btn-warning" %>
-    <%= link_to '削除', @location, data: {turbo_method: :delete, turbo_confirm: '本当に削除しますか？'}, class: "btn btn-error" %>
+    <%= button_to '削除', @location, method: :delete, data: { turbo_confirm: '本当に削除しますか？' }, class: "btn btn-error" %>
     <%= link_to '一覧に戻る', locations_path, class: "btn btn-ghost" %>
   </div>
 </div>
-
