フォントを揃える

--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 py-8">
+<div class="container cute-title mx-auto px-4 py-8">
   <h1 class="text-2xl font-bold mb-4"><%= @location.name %>を編集</h1>
 
   <div class="mb-4 text-sm text-gray-600">
