--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,5 +1,5 @@
 <%= render 'layouts/header' %>  
-<div class="container mx-auto px-4 py-8">
+<div class="container cute-title mx-auto px-4 py-8">
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-2xl font-bold">保存した場所一覧</h1>
   </div>
@@ -25,8 +25,8 @@
         <thead>
           <tr>
             <th>名前</th>
-            <th>住所</th>
-            <th class="text-right">操作</th>
+            <th></th>
+            <th class="text-right"></th>
           </tr>
         </thead>
         <tbody>
