--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -1,6 +1,6 @@
 <%= render 'layouts/header' %>  
 <%= render 'shared/route_form_header', mode: :walk %>
-<div class="flex items-center space-x-2 justify-center">
+<div class="cute-title flex items-center space-x-2 justify-center">
   <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
   <button id="searchBtn" class="btn_effect px-2 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">検索</button>
   <button id="walkDrawRoute" class="btn_effect px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold">ルート検索</button>
