--- a/app/views/locations/_location.html.erb
+++ b/app/views/locations/_location.html.erb
@@ -4,6 +4,6 @@
   <td class="text-right space-x-2">
     <%= link_to '詳細', location, class: "btn btn-sm btn-info" %>
     <%= link_to '編集', edit_location_path(location), class: "btn btn-sm btn-warning" %>
-    <%= button_to '削除', location, method: :delete, data: { turbo_confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-error" %>
+    <%= button_to '削除', location, method: :delete, data: { turbo_confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-neutral btn-error", form_class: "inline-block" %>
   </td>
 </tr>
