--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 py-8">
+<div class="container cute-title mx-auto px-4 py-8">
   <h1 class="text-2xl font-bold mb-4">新しい場所を登録</h1>
 
   <div class="mb-4">
