--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4 py-8">
+<div class="container cute-title mx-auto px-4 py-8">
   <div class="flex justify-between items-center md-6">
     <h1 class="text-2xl font-bold"><%= @location.name %>の詳細</h1>
   </div>
@@ -27,7 +27,7 @@
 
   <div class="mt-6 flex items-center space-x-2">
     <%= link_to '編集', edit_location_path(@location), class: "btn-warning" %>
-    <%= button_to '削除', @location, method: :delete, data: { turbo_confirm: '本当に削除しますか？' }, class: "btn btn-error" %>
+    <%= button_to '削除', @location, method: :delete, data: { turbo_confirm: '本当に削除しますか？' }, class: "btn btn-sm btn-error" %>
     <%= link_to '一覧に戻る', locations_path, class: "btn btn-ghost" %>
   </div>
 </div>
