--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -1,7 +1,7 @@
 <%= render 'layouts/header' %>  
 <%= render 'shared/route_form_header', mode: :car %>
   <div class="space-y-2 -mt-2"> 
-    <div class="flex items-center space-x-2 justify-center">
+    <div class="cute-title flex items-center space-x-2 justify-center">
       <input type="text" id="address" placeholder="住所や施設名を入力" class="w-1/2">
       <button id="searchBtn" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">検索</button>
     </div>
