--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -2,6 +2,7 @@
 <div class="container cute-title mx-auto px-4 py-8">
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-2xl font-bold">保存した場所一覧</h1>
+    <%= link_to 'マップへ戻る', new_route_path, class: "btn_effect bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold no-underline" %>
   </div>
 
   <% if @locations.empty? %>
@@ -17,7 +18,6 @@
         <thead>
           <tr>
             <th>名前</th>
-            <th></th>
             <th class="text-right"></th>
           </tr>
         </thead>
