--- a/app/views/routes/walk_navigation.html.erb
+++ b/app/views/routes/walk_navigation.html.erb
@@ -1,3 +1,4 @@
+<div id="error-message" class="hidden"></div>
 <%= link_to walk_routes_path do %>
   <%= image_tag "/images/stopNavi.png", alt: "stopNavi", class:"navi_btn" %>
 <% end %>
