--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -7,19 +7,12 @@
 </div>
 
 <!-- フローティングボタンをヘッダーの下に移動 -->
-<div class="absolute top-45 right-0 z-10 flex items-center">
+<div class="cute-title absolute top-45 right-0 z-10 flex items-center">
   <button id="currentPosBtn" class="btn_effect current_pos appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
     <%= image_tag "/images/currentPos.png", alt: "current_pos" %>
   </button> 
   <%= link_to walk_navigation_routes_path, data: { barba: "link" } do %>
     <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn" %>
   <% end %>
-</div>
-<div class="mt-15">
-  <div class="point-selector">
-    <button id="startPoint">現在地</button>
-    <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
-    <button id="destinationPoint">目的地</button>
-  </div>
-  <div id="map"></div>
+  <%= render 'shared/route_points' %>
 </div>
