分単位まで登録可能に

--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -9,6 +9,12 @@
           <option><%= format('%02d', h) %></option>
         <% end %>
       </select>
+      <select class="select select-borderd select-sm w-20 bg-white border-[#9A6812]">
+        <option disabled selected>分</option>
+        <% (0..59).each do |m| %>
+          <option><%= format('%02d', m) %></option>
+        <% end %>
+      </select>
     </div>
     <%= image_tag "/images/arrow.png", alt: "arrow", class: "arrow" %>
     <button id="destinationPoint" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">目的地</button>
@@ -18,6 +24,12 @@
         <option disabled selected>時</option>
         <% (0..23).each do |h| %>
           <option><%= format('%02d', h) %></option>
+        <% end %>
+      </select>
+      <select>
+        <option disabled selected>分</option>
+        <% (0..59).each do |m| %>
+          <option><%= format('%02d', m) %></option>
         <% end %>
       </select>
     </div>
