中継点をJSとUIに追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,7 @@
     <ul class="info-window-dropdown-menu bg-base-100 rounded-box p-2 mt-1" hidden>
       <li><button class="info-window-set-start btn btn-sm btn-primary rounded-full">出発地に設定</button></li>
       <li><button class="info-window-set-destination btn btn-sm btn-secondary rounded-full">目的地に設定</button></li>
+      <li><button class="info-window-set-relay-point btn btn-sm btn-primary rounded-full">中継地に設定</button></li>
     </ul>
   </template>
 </html>
